@@ -2,11 +2,46 @@ package com.freya02.quadropolis;
 
 import com.freya02.quadropolis.plate.Plate;
 
+import java.util.Objects;
+
 /**
  * x {@link Integer#MIN_VALUE} if on the left, {@link Integer#MAX_VALUE} if on the right
  * <br>y {@link Integer#MIN_VALUE} if on the top, {@link Integer#MAX_VALUE} if on the bottom
  */
-public record PlacedArchitectCoordinates(int x, int y) {
+public final class PlacedArchitectCoordinates {
+	private final int x;
+	private final int y;
+
+	PlacedArchitectCoordinates(int x, int y) {
+		this.x = x;
+		this.y = y;
+	}
+
+	public int x() {return x;}
+
+	public int y() {return y;}
+
+	@Override
+	public boolean equals(Object obj) {
+		if (obj == this) return true;
+		if (obj == null || obj.getClass() != this.getClass()) return false;
+		var that = (PlacedArchitectCoordinates) obj;
+		return this.x == that.x &&
+				this.y == that.y;
+	}
+
+	@Override
+	public int hashCode() {
+		return Objects.hash(x, y);
+	}
+
+	@Override
+	public String toString() {
+		return "PlacedArchitectCoordinates[" +
+				"x=" + x + ", " +
+				"y=" + y + ']';
+	}
+
 	public static PlacedArchitectCoordinates fromTop(int x) {
 		return new PlacedArchitectCoordinates(x, Integer.MIN_VALUE);
 	}
@@ -46,10 +81,10 @@ public record PlacedArchitectCoordinates(int x, int y) {
 			return new TileCoordinates(plate.getWidth() - 1 - architect.getReach(), y);
 		} else if (isTop()) {
 			return new TileCoordinates(x, architect.getReach());
-		} else  if (isBottom()) {
+		} else if (isBottom()) {
 			return new TileCoordinates(x, plate.getHeight() - 1 - architect.getReach());
 		} else {
-			throw new IllegalStateException("Invalid architect coordinates: %d, %d".formatted(x, y));
+			throw new IllegalStateException(String.format("Invalid architect coordinates: %d, %d", x, y));
 		}
 	}
 }
